--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
 contextlib2==0.6.0
+cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 distlib==0.3.0
@@ -48,9 +49,11 @@ jupyter-console==6.2.0
 jupyter-core==4.7.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
+kiwisolver==1.3.1
 lockfile==0.12.2
 Markdown==3.3.4
 MarkupSafe==1.1.1
+matplotlib==3.3.4
 mistune==0.8.4
 monotonic==1.5
 msgpack==0.6.2
@@ -70,6 +73,7 @@ pep517==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.1.1
+plotly==4.14.3
 progress==1.5
 prometheus-client==0.9.0
 prompt-toolkit==3.0.16
