--- a/config.yml
+++ b/config.yml
@@ -1,11 +1,3 @@
 model_params:
-  quantiles:
-    - 0.2
-    - 0.3
-    - 0.4
-    - 0.5
-    - 0.6
-    - 0.7
-    - 0.8
-best_model:
-  model-epoch=09-val_loss=694.86.ckpt
+  quantiles: [0.2, 0.5, 0.8]
+best_model: model-epoch=93-val_loss=0.06.ckpt
