--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,3 @@
 model_params:
-  quantiles: [0.2, 0.5, 0.8]
+  quantiles: [0.01, 0.05, 0.2, 0.4, 0.5, 0.6, 0.8, 0.95, 0.99]
 best_model: model-epoch=93-val_loss=0.06.ckpt
